--- a/Interface.html
+++ b/Interface.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-<title> Welcome to the computer science club C++ quiz</title>
+  
+  <head>
+  <title> Welcome to the computer science club C++ quiz</title>
+  </head>
+  
+  <body>
   <h1>This is a header</h1>
-
+  <h1>Welcome to my quiz!</h1>
+  
+  </body>
+  
+  
   
 <html>
